libaio (0.3.110-1) UNRELEASED; urgency=low

  * New upstream release.
    - Refresh patches.

 -- Guillem Jover <guillem@debian.org>  Mon, 14 Jul 2014 18:07:19 +0200

libaio (0.3.109-4) unstable; urgency=low

  * Now using Standards-Version 3.9.4 (no changes needed).
  * Remove package creation information from debian/copyright.
  * Update upstream git URL in debian/copyright.
  * Add support for x32 (from the Yocto project). (Closes: #702183)
    Thanks to Daniel Schepler <dschepler@gmail.com>.
  * Add support for arm64 (stolen from upstream). (Closes: #702409)
    Thanks to Ian Campbell <ijc@hellion.org.uk>.
  * Add cross-compilation support.
    Based on a patch by Ian Campbell <ijc@hellion.org.uk>.
  * Update debian/watch file to a working URL.

 -- Guillem Jover <guillem@debian.org>  Mon, 06 May 2013 18:56:19 +0200

libaio (0.3.109-3) unstable; urgency=low

  * Escape backslash in man pages. (Closes: #651833)
    Thanks to Stephan Springl <springl-libaio@bfw-online.de>.
  * Do not install man pages now provided by manpages-dev. (Closes: #650108)
  * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS.
  * Now using Standards-Version 3.9.3 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Thu, 21 Jun 2012 09:21:59 +0200

libaio (0.3.109-2) unstable; urgency=low

  * Add a symbols file for libaio1.
  * Remove heading ‘./’ from lintian-override tag.
  * Fix FTBFS with newer gcc 4.6: (Closes: #638848)
    - Do not build the test-suite with -Werror.
    - Use unused waitpid() return code variables to assert valid values.
  * Make shared library packages multiarch:
    - Build-Depend on debhelper 8.1.3.
    - Add misc:Pre-Depends substvar to Pre-Depends field in libaio1.
    - Add “Multi-Arch: same” field to libaio1 and libaio1-dbg.
    - Change paths from lib/ to lib/* in install and lintian-override files.
    - Define DEB_HOST_MULTIARCH and use it to set libdir and libdevdir.
  * Install all libaio io*.3 man pages. (Closes: #418048)