@@ -9,7 +9,7 @@
  SO_CFLAGS=-shared $(CFLAGS)
  L_CFLAGS=$(CFLAGS)
 -LINK_FLAGS=
-+LINK_FLAGS=-lgcc
++LINK_FLAGS=-Wl,--as-needed -lgcc -lc
  LINK_FLAGS+=$(LDFLAGS)
  
  soname=libaio.so.1
