@@ -2,7 +2,7 @@
 00_arches_sh.patch
 00_arches_sparc64.patch
 00_arches_x32.patch
-01_link_libgcc.patch
+01_link_libs.patch
 02_libdevdir.patch
 03_man_errors.patch
 03_man_escape_backslash.patch
